AppServer wird automatisch bei einer Request auf den Controller gestartet. (Nur für eine Testanwendung!)
git-svn-id: svn://localhost/twospot_svn/trunk@168 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -26,8 +26,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/apache-mime4j-0.6.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/httpclient-4.0/httpclient-4.0.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/httpclient-4.0/httpcore-4.0.1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/httpclient-4.0/httpmime-4.0.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.beans-3.0.0.RC1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.core-3.0.0.RC1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
