AppServer erwartet zwei Parameter beim Starten. (appId = Application Id und ctrlPort = Port auf dem der Controller mit dem AppServer kommuniziert)
git-svn-id: svn://localhost/twospot_svn/trunk@172 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-webapp-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-xml-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache-cli-1.2/commons-cli-1.2.jar" sourcepath="/Libs/lib/apache-cli-1.2/commons-cli-1.2-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
