--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -28,5 +28,9 @@
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.beans-3.0.0.RC1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.core-3.0.0.RC1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache_commons/ws-commons-util-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache-xmlrpc-3.1.2/xmlrpc-client-3.1.2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache-xmlrpc-3.1.2/xmlrpc-common-3.1.2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache-xmlrpc-3.1.2/xmlrpc-server-3.1.2.jar" sourcepath="D:/work/mscWolke/trunk/dev/3party/apache-xmlrpc-3.1.2/apache-xmlrpc-3.1.2-src/server/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
