Fehler in yaml-File behoben. war-archiv gelöscht.
git-svn-id: svn://localhost/twospot_svn/trunk@206 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/HelloWorldServlet/build.xml
+++ b/HelloWorldServlet/build.xml
@@ -50,14 +50,14 @@
 			<fileset dir="bin" />
 		</copy>
 
-		<war destfile="helloworldservlet.war" basedir="deploy" />
+		<war destfile="helloworld.war" basedir="deploy" />
 		
 		<delete dir="deploy" />
 	</target>
 
 	<target name="deploy" depends="war">
 		<copy todir="../AppServer/webapps">
-			<fileset file="helloworldservlet.war" />
+			<fileset file="helloworld.war" />
 		</copy>
 	</target>
 
