Ältere Version vom Spring-Framework in den Libs. Universeller Proxy-Handler. Neuer Proxy-Handler im Frontend getestet.
git-svn-id: svn://localhost/twospot_svn/trunk@235 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/HelloWorldDjango/build.xml
+++ b/HelloWorldDjango/build.xml
@@ -16,6 +16,8 @@
 		<jar destfile="hellopython.war" basedir="deploy" />
 		
 		<delete dir="deploy" />
+		
+		<copyfile dest="../HttpFileServer/files/hellopython.war" src="hellopython.war"/>
 	</target>
 	
 </project>
