Ältere Version vom Spring-Framework in den Libs. Universeller Proxy-Handler. Neuer Proxy-Handler im Frontend getestet.
git-svn-id: svn://localhost/twospot_svn/trunk@236 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Frontend/.classpath
+++ b/Frontend/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Manager"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
