--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -26,13 +26,16 @@
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/apache-mime4j-0.6.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.beans-3.0.0.RC1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.core-3.0.0.RC1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/ws-commons-util-1.0.2.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/apache-xmlrpc-3.1.2/xmlrpc-client-3.1.2.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/apache-xmlrpc-3.1.2/xmlrpc-common-3.1.2.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/apache-xmlrpc-3.1.2/xmlrpc-server-3.1.2.jar" sourcepath="D:/work/mscWolke/trunk/dev/3party/apache-xmlrpc-3.1.2/apache-xmlrpc-3.1.2-src/server/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-beans.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-context.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-core.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-jms.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring-sources.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-aop.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-context-support.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
