--- a/Manager/.classpath
+++ b/Manager/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
