Deployment von Anwendungen über Frontend
git-svn-id: svn://localhost/twospot_svn/trunk@314 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Frontend/.classpath
+++ b/Frontend/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/Manager"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-client/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
