HttpClient-Instanzen werden über die Spring-Konfigurationsdatei als Beans angelegt. Aufbau vom Frontend etwas eleganter.
git-svn-id: svn://localhost/twospot_svn/trunk@324 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/HelloWorldDjango/.project
+++ b/HelloWorldDjango/.project
@@ -3,6 +3,7 @@
 	<name>HelloWorldDjango</name>
 	<comment></comment>
 	<projects>
+		<project>AppServer</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
