--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -4,33 +4,22 @@
 	<classpathentry kind="src" path="etc"/>
 	<classpathentry kind="src" path="jsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-ajp-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-annotations-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-deploy-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-deploy/src"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-http-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-http/src"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-io-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-jmx-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-jndi-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-plus-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-policy-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-rewrite-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-security-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-server-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-servlet-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-servlets-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-servlets/src"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-util-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-webapp-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-xml-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/apache-cli-1.2/commons-cli-1.2.jar" sourcepath="/Libs/lib/apache-cli-1.2/commons-cli-1.2-sources.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.core-3.0.0.RC1.jar" sourcepath="/Libs/lib/spring-framework-3.0.0.RC1/src/org.springframework.core-sources-3.0.0.RC1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.beans-3.0.0.RC1.jar" sourcepath="/Libs/lib/spring-framework-3.0.0.RC1/src/org.springframework.beans-sources-3.0.0.RC1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.context-3.0.0.RC1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5.jar" sourcepath="/Libs/lib/snakeyaml-1.5/snakeyaml-1.5-sources.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jython-2.5.1/jython.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-core.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-deploy-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-deploy/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-http-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-http/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-io-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-io/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-server-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-server/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-servlet-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-servlets-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-util-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-util/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache-cli-1.2/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-client/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-webapp-7.0.0.v20091005.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
