--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -22,5 +22,8 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-client/src"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-webapp-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-security-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-rewrite-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-xml-7.0.0.v20091005.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
