Classpath vom AppServer mit den JDO-Libs erweitert
git-svn-id: svn://localhost/twospot_svn/trunk@386 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -25,5 +25,8 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-security-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-rewrite-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-xml-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-core-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/hbase-1.0.4-SNAPSHOT/datanucleus-hbase-1.0.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/jdo2-api-2.3-ea/jdo2-api-2.3-ea.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
