--- a/HelloWorldServlet/.classpath
+++ b/HelloWorldServlet/.classpath
@@ -3,5 +3,20 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-cache-2.0.0-m2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-connectionpool-2.0.0-m1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-core-2.0.0-m3-sources.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-core-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-enhancer-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-management-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-rdbms-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/dep/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/dep/hsqldb-1.8.0.4.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/jdo2-api-2.3-ea/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="src" path=".apt_generated">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
