--- a/HelloWorldServlet/build.xml
+++ b/HelloWorldServlet/build.xml
@@ -10,6 +10,7 @@
 	<path id="HelloWorldServlet.classpath">
 		<pathelement location="bin" />
 		<pathelement location="${AppServer.location}/lib/jetty-7.0.0/servlet-api-2.5.jar" />
+		<pathelement location="${AppServer.location}/lib/jetty-7.0.0/servlet-api-2.5.jar" />
 	</path>
 
 	<target name="init">
@@ -33,13 +34,13 @@
 
 	<target depends="init" name="build-project">
 		<echo message="${ant.project.name}: ${ant.file}" />
-		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" source="${source}" target="${target}">
+		<javac debug="true" debuglevel="${debuglevel}" destdir="bin" source="${source}" target="${target}" >
 			<src path="src" />
 			<classpath refid="HelloWorldServlet.classpath" />
 		</javac>
 	</target>
 
-	<target name="war" depends="build">
+	<target name="war" >
 		<mkdir dir="deploy" />
 		<copy todir="deploy">
 			<fileset dir="war" />
@@ -50,14 +51,14 @@
 			<fileset dir="bin" />
 		</copy>
 
-		<war destfile="helloworld.war" basedir="deploy" />
+		<war destfile="helloworldnull.war" basedir="deploy" />
 		
 		<delete dir="deploy" />
 	</target>
 
 	<target name="deploy" depends="war">
-		<copy todir="../AppServer/webapps">
-			<fileset file="helloworld.war" />
+		<copy todir="../HttpFileServer/files">
+			<fileset file="helloworldnull.war" />
 		</copy>
 	</target>
 
