Manager schreibt seine Verbindungsdaten in den ZooKeeper-Service. Frontend lädt die Daten aus dem ZooKeeper-Service. Bei Abstürzen lässt sich das Frontend vom ZooKeeper informieren, bis der ZNode "/manager" erstellt wird. RMI-Connection kann nicht mehr über die ProxyFactory von Spring aufgebaut werden, da sich die Verbindungsdaten jederzeit ändern können. Frontend ist weitgehend robust gegen RMI-Kommunikationsfehler, liefert entsprechende HTTP-Status-Meldungen.
git-svn-id: svn://localhost/twospot_svn/trunk@392 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Frontend/.classpath
+++ b/Frontend/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-continuation-7.0.0.v20091005.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-client-7.0.0.v20091005.jar" sourcepath="D:/work/jetty7src/jetty-client/src"/>
+	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
