AppServer greift auch auf die zentrale properties-File zurück
git-svn-id: svn://localhost/twospot_svn/trunk@418 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -1,8 +1,19 @@
+# RMI-Settings
 rmi.registry.host=localhost
 rmi.registry.port=2299
 
+
+# Frontend
 http.frontend.port=6060
 http.frontend.interface=0.0.0.0
 
+
+# Controller
 http.controller.port=8080
 http.controller.interface=0.0.0.0
+
+
+# AppServer
+appserver.working.dir=C:/temp
+python.lib=C:/jython2.5.1/Lib
+python.lib.site-packages=C:/jython2.5.1/Lib/site-packages
