AppServer wurde vom Controller nicht mit dem vollständigen Classpath gestartet. Ausfall eines Managers wurde vom Frontend nicht korrekt behandelt.
git-svn-id: svn://localhost/twospot_svn/trunk@423 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -36,5 +36,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/jdo2-api-2.3-ea/jdo2-api-2.3-eb.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/dep/asm-3.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/dep/hsqldb-1.8.0.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
