--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -25,17 +25,20 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-security-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-rewrite-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-xml-7.0.0.v20091005.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-core-2.0.0-m3.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/hbase-1.0.4-SNAPSHOT/datanucleus-hbase-1.0.4-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-cache-2.0.0-m2.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-connectionpool-2.0.0-m1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-core-2.0.0-m3-sources.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-enhancer-2.0.0-m3.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-management-1.0.2.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/core-2.0.0-m3/datanucleus-rdbms-2.0.0-m3.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/jdo2-api-2.3-ea/jdo2-api-2.3-eb.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/dep/asm-3.1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/dep/hsqldb-1.8.0.4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/ehcache-1.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/geronimo-jpa_3.0_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hadoop-core-0.20.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hbase-0.20.0.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/joda-time-1.6.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-cache-2.0.0-m2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-core-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-hbase-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jodatime-2.0.0-m2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jpa-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-management-1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
