--- a/AppServer/etc/etc/jdoDefault.properties
+++ b/AppServer/etc/etc/jdoDefault.properties
@@ -1,12 +1,5 @@
-javax.jdo.PersistenceManagerFactoryClass=org.datanucleus.jdo.JDOPersistenceManagerFactory
-
-javax.jdo.option.ConnectionDriverName=org.hsqldb.jdbcDriver
-
-javax.jdo.option.ConnectionURL=jdbc:hsqldb:mem:nucleus1
-
-javax.jdo.option.ConnectionUserName=sa
-javax.jdo.option.ConnectionPassword=
+datanucleus.ConnectionURL=hbase:
+datanucleus.ConnectionUserName=
+datanucleus.ConnectionPassword=
 
 datanucleus.autoCreateSchema=true
-datanucleus.validateTables=false
-datanucleus.validateConstraints=false
