Ant-File um die jar vom HBasePlugin zu erzeugen. Das Ant-Script erzeugt NUR die JAR und compiliert nichts!
git-svn-id: svn://localhost/twospot_svn/trunk@441 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -39,6 +39,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jpa-2.0.0-m3.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-management-1.0.2.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hbase-0.20.0.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/datanucleus/myhbase.jar"/>
+	<classpathentry kind="lib" path="/HBasePlugin (DataNucleus)/hbaseplugin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
