Verschiedene Ansätze für die Implementierung einer Benutzer und Sitzungsverwaltung ausprobiert. AppServer kommuniziert mit den Services (UserServices) nicht direkt sondern über den Controller.
git-svn-id: svn://localhost/twospot_svn/trunk@449 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -40,5 +40,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-management-1.0.2.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hbase-0.20.0.jar"/>
 	<classpathentry kind="lib" path="/HBasePlugin (DataNucleus)/hbaseplugin.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
