--- a/Controller/.classpath
+++ b/Controller/.classpath
@@ -39,5 +39,19 @@
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-context-support.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/h2-1.2.123/h2-1.2.123.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/asm-3.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/ehcache-1.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/geronimo-jpa_3.0_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hadoop-core-0.20.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hbase-0.20.0.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/joda-time-1.6.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-cache-2.0.0-m2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-core-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-enhancer-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jodatime-2.0.0-m2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-jpa-2.0.0-m3.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-management-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-hbase-1.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
