Fehler bei der Überprüfung von AppIds behoben. Eiges Paket für den UserService im Controller. Testanwendung greift richtig auf den UserService zu.
git-svn-id: svn://localhost/twospot_svn/trunk@456 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/HelloWorldServlet/build.xml
+++ b/HelloWorldServlet/build.xml
@@ -51,14 +51,14 @@
 			<fileset dir="bin" />
 		</copy>
 
-		<war destfile="helloworldnull.war" basedir="deploy" />
+		<war destfile="portalnull.war" basedir="deploy" />
 		
 		<delete dir="deploy" />
 	</target>
 
 	<target name="deploy" depends="war">
 		<copy todir="../HttpFileServer/files">
-			<fileset file="helloworldnull.war" />
+			<fileset file="portalnull.war" />
 		</copy>
 	</target>
 
