--- a/HelloWorldServlet/war/WEB-INF/web.xml
+++ b/HelloWorldServlet/war/WEB-INF/web.xml
@@ -7,11 +7,22 @@
 		</servlet-class>
 	</servlet>
 
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>org.prot.helloworldservlet.LoginServlet
+		</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>HelloWorld</servlet-name>
 		<url-pattern>/helloworld</url-pattern>
 	</servlet-mapping>
-	
+
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/doLogin</url-pattern>
+	</servlet-mapping>
+
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
