--- a/HelloWorldServlet/war/WEB-INF/web.xml
+++ b/HelloWorldServlet/war/WEB-INF/web.xml
@@ -6,22 +6,23 @@
 		<servlet-class>org.prot.helloworldservlet.HelloWorldServlet
 		</servlet-class>
 	</servlet>
-
+	<servlet-mapping>
+		<servlet-name>HelloWorld</servlet-name>
+		<url-pattern>/helloworld</url-pattern>
+	</servlet-mapping>
+	
+	
+	
 	<servlet>
 		<servlet-name>LoginServlet</servlet-name>
 		<servlet-class>org.prot.helloworldservlet.LoginServlet
 		</servlet-class>
 	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>HelloWorld</servlet-name>
-		<url-pattern>/helloworld</url-pattern>
-	</servlet-mapping>
-
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
-		<url-pattern>/doLogin</url-pattern>
+		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
+	
 
 
 	<welcome-file-list>
