--- a/HelloWorldServlet/war/WEB-INF/web.xml
+++ b/HelloWorldServlet/war/WEB-INF/web.xml
@@ -10,9 +10,8 @@
 		<servlet-name>HelloWorld</servlet-name>
 		<url-pattern>/helloworld</url-pattern>
 	</servlet-mapping>
-	
-	
-	
+
+
 	<servlet>
 		<servlet-name>LoginServlet</servlet-name>
 		<servlet-class>org.prot.helloworldservlet.LoginServlet
@@ -22,7 +21,17 @@
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
-	
+
+
+	<servlet>
+		<servlet-name>LoginFinishServlet</servlet-name>
+		<servlet-class>org.prot.helloworldservlet.LoginFinishServlet
+		</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginFinishServlet</servlet-name>
+		<url-pattern>/loginfinish</url-pattern>
+	</servlet-mapping>
 
 
 	<welcome-file-list>
