--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -41,5 +41,6 @@
 	<classpathentry kind="lib" path="/Libs/lib/datanucleus/deps/hbase-0.20.0.jar"/>
 	<classpathentry kind="lib" path="/HBasePlugin (DataNucleus)/hbaseplugin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-policy-7.0.0.v20091005.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
