--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -42,5 +42,18 @@
 	<classpathentry kind="lib" path="/HBasePlugin (DataNucleus)/hbaseplugin.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-policy-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/el-api.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-el.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper-jdt.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jasper.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jasper/tomcat-juli.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jsp-api-2.1-7.0.0pre2.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-ajp-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-annotations-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-jmx-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-jndi-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-plus-7.0.0.v20091005.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-el.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
