--- a/HelloWorldServlet/war/WEB-INF/web.xml
+++ b/HelloWorldServlet/war/WEB-INF/web.xml
@@ -3,31 +3,9 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
 	version="2.4">
-	<!--
 
 
-		<filter> <display-name>Stripes Filter</display-name>
-		<filter-name>StripesFilter</filter-name>
-		<filter-class>net.sourceforge.stripes.controller.StripesFilter</filter-class>
-		<init-param> <param-name>ActionResolver.Packages</param-name>
-		<param-value>org.prot.portal</param-value> </init-param> </filter>
-
-		<filter-mapping> <filter-name>StripesFilter</filter-name>
-		<url-pattern>*.jsp</url-pattern> <dispatcher>REQUEST</dispatcher>
-		</filter-mapping> <filter-mapping>
-		<filter-name>StripesFilter</filter-name>
-		<servlet-name>StripesDispatcher</servlet-name>
-		<dispatcher>REQUEST</dispatcher> </filter-mapping> <servlet>
-		<servlet-name>StripesDispatcher</servlet-name>
-		<servlet-class>net.sourceforge.stripes.controller.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup> </servlet> <servlet-mapping>
-		<servlet-name>StripesDispatcher</servlet-name>
-		<url-pattern>*.action</url-pattern> </servlet-mapping>
-	-->
-
-
-
-	<!-- Using spring MVC -->
+	<!-- Configure Spring MVC -->
 	<servlet>
 		<servlet-name>springapp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -43,24 +21,4 @@
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
-	<!--
-
-		<servlet> <servlet-name>HelloWorld</servlet-name>
-		<servlet-class>org.prot.helloworldservlet.HelloWorldServlet</servlet-class>
-		</servlet> <servlet-mapping> <servlet-name>HelloWorld</servlet-name>
-		<url-pattern>/helloworld</url-pattern> </servlet-mapping> <servlet>
-		<servlet-name>LoginServlet</servlet-name>
-		<servlet-class>org.prot.helloworldservlet.LoginServlet</servlet-class>
-		</servlet> <servlet-mapping> <servlet-name>LoginServlet</servlet-name>
-		<url-pattern>/login</url-pattern> </servlet-mapping> <servlet>
-		<servlet-name>LoginFinishServlet</servlet-name>
-		<servlet-class>org.prot.helloworldservlet.LoginFinishServlet</servlet-class>
-		</servlet> <servlet-mapping>
-		<servlet-name>LoginFinishServlet</servlet-name>
-		<url-pattern>/loginfinish</url-pattern> </servlet-mapping>
-
-
-		<welcome-file-list> <welcome-file>index.html</welcome-file>
-		</welcome-file-list>
-	-->
 </web-app>
