Die hbaseplugin.jar wird jetzt ins Lib-Verzeichnis kopiert. Die HBasePlugin build.xml packt auch die plugin.xml-Datei mit in das jar.
git-svn-id: svn://localhost/twospot_svn/trunk@534 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/HBasePlugin (DataNucleus)/build.xml
+++ b/HBasePlugin (DataNucleus)/build.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="lib" name="HBasePlugin (DataNucleus)">
 	<target name="lib">
-		<jar destfile="hbaseplugin.jar">
+		<jar destfile="../Libs/gen/hbaseplugin.jar">
 			<fileset dir="bin">
+			</fileset>
+			<fileset dir=".">
+				<include name="plugin.xml"/>
 			</fileset>
 		</jar>		
 	</target>
