Controller startet eine eigene RMI registry auf einem eigenen Port. Der Grund ist dass JMX-Beans mit dem RMI-Appender sich in der RMI-Registry nicht reregistrieren. D.h. wenn der Controll abstürzt verbleibt die RMI-Registrierung für den JMX-Bean in der Registry. Bei dem nächsten Start vom Controller kann dieser den JMX-Bean nicht binden - das Binding existiert bereits.
git-svn-id: svn://localhost/twospot_svn/trunk@591 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Master/.classpath
+++ b/Master/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Util"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Controller"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-jms.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-tx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
