--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -9,6 +9,7 @@ http.frontend.interface=0.0.0.0
 
 
 # Controller
+rmi.controller.registry.port=2298
 http.controller.port=8080
 http.controller.interface=0.0.0.0
 
