--- a/HttpFileServer/.classpath
+++ b/HttpFileServer/.classpath
@@ -23,10 +23,11 @@
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-webapp-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/jetty-xml-7.0.0.v20091005.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/jetty-7.0.0/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.beans-3.0.0.RC1.jar" sourcepath="/Libs/lib/spring-framework-3.0.0.RC1/src/org.springframework.beans-sources-3.0.0.RC1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.context-3.0.0.RC1.jar"/>
-	<classpathentry kind="lib" path="/Libs/lib/spring-framework-3.0.0.RC1/bin/org.springframework.core-3.0.0.RC1.jar" sourcepath="/Libs/lib/spring-framework-3.0.0.RC1/src/org.springframework.core-sources-3.0.0.RC1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/apache_commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/log4j-1.2.15/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-beans.jar" sourcepath="/Libs/lib/spring-framework-2.5.6.SEC01/spring-sources.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-context-support.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-context.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/spring.jar" sourcepath="D:/work/mscNotes/3party/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
