Falschen properties-Namen korrigiert
git-svn-id: svn://localhost/twospot_svn/trunk@599 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -1,6 +1,6 @@
 # Mode in which the AppServer is running
 appServer.mode=DEVELOPMENT
-appserver.working.dir=C:/temp
+appserver.workDir=C:/temp
 appServer.scratchdir=C:/temp
 
 # Security options
