Memory-Schutz gelöscht. Falls die Anwendung zu viel Speicher benötigt wird der Heap-Space von der VM überlaufen.
git-svn-id: svn://localhost/twospot_svn/trunk@605 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -1,9 +1,13 @@
-# Mode in which the AppServer is running
+#### Server Options ###
+# Mode in which the AppServer is running (DEVELOPMENT, SERVER)
 appServer.mode=DEVELOPMENT
+
+# Defines the working directory in which the extracted application directores reside
 appserver.workDir=C:/temp
-appServer.scratchdir=C:/temp
 
-# Security options
+# Defines the scratch dir wich is used by the JSP-Compiler (TODO: Currently unused!!!)
+appServer.scratchdir=C:/temp/scratch
+
+### Security options ###
+# Is the DOS prevention mechanism enabled
 appServer.security.DOSPrevention=true
-appServer.security.MemoryPrevention=false
-
