Zeit für DOS-Prevention in Konfigurationsatei
git-svn-id: svn://localhost/twospot_svn/trunk@606 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -9,5 +9,5 @@ appserver.workDir=C:/temp
 appServer.scratchdir=C:/temp/scratch
 
 ### Security options ###
-# Is the DOS prevention mechanism enabled
-appServer.security.DOSPrevention=true
+# Request-Time which is detected as a DOS-attack (in ms)
+appServer.security.DOSPrevention.time=40000
