Build-Scripte zum erstellen des ZIP-Pakets für den Development-Server. Für die Scripte wurde ein neues Projekt Build angelegt.
git-svn-id: svn://localhost/twospot_svn/trunk@612 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -15,6 +15,11 @@ http.controller.interface=0.0.0.0
 
 
 # AppServer
-appserver.working.dir=C:/temp
 python.lib=C:/jython2.5.1/Lib
 python.lib.site-packages=C:/jython2.5.1/Lib/site-packages
+
+
+# Fileserver
+http.fileserver.port=8080
+http.fileserver.interface=0.0.0.0
+
