AppServer verwendet im Development-Mode die H2-Datenbak über JDO-DataNucleus.
git-svn-id: svn://localhost/twospot_svn/trunk@620 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/AppServer/.classpath
+++ b/AppServer/.classpath
@@ -64,5 +64,7 @@
 	<classpathentry kind="lib" path="/Libs/lib/spring-framework-2.5.6.SEC01/modules/spring-webmvc.jar"/>
 	<classpathentry kind="lib" path="/Libs/gen/hbaseplugin.jar"/>
 	<classpathentry kind="lib" path="/Libs/lib/zookeeper-3.2.1/zookeeper-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/h2-1.2.123/h2-1.2.123.jar"/>
+	<classpathentry kind="lib" path="/Libs/lib/datanucleus/datanucleus-rdbms-2.0.0-m2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
