Konfigurationseinstellung für die Domain unter der die Platform ausgeführt wird. Diese wird z.B. benötigt um die URL im LoginService zu generieren.
git-svn-id: svn://localhost/twospot_svn/trunk@623 8d73be03-56cb-46cc-8948-98b08ae92ef2

--- a/Util/etc/etc/config.properties
+++ b/Util/etc/etc/config.properties
@@ -1,3 +1,6 @@
+# Domain and port number under which the platform is running
+platform.domain=twospot.local:6060
+
 # RMI-Settings
 rmi.registry.host=localhost
 rmi.registry.port=2299
